--- a/app/src/main/res/layout/activity_payment2.xml
+++ b/app/src/main/res/layout/activity_payment2.xml
@@ -193,12 +193,12 @@
         android:id="@+id/radioButton6"
         android:layout_width="88dp"
         android:layout_height="41dp"
-        android:layout_marginEnd="120dp"
+        android:layout_marginEnd="116dp"
         android:text="Master"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.223" />
+        app:layout_constraintVertical_bias="0.224" />
 
     <EditText
         android:id="@+id/Rid"
@@ -213,5 +213,29 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="78dp"
+        android:layout_height="49dp"
+        app:layout_constraintBottom_toTopOf="@+id/Rid"
+        app:layout_constraintEnd_toStartOf="@+id/radioButton5"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView12"
+        app:layout_constraintVertical_bias="0.75"
+        app:srcCompat="@drawable/visa" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="50dp"
+        android:layout_height="46dp"
+        app:layout_constraintBottom_toTopOf="@+id/Rid"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.015"
+        app:layout_constraintStart_toEndOf="@+id/radioButton6"
+        app:layout_constraintTop_toBottomOf="@+id/textView12"
+        app:layout_constraintVertical_bias="0.69"
+        app:srcCompat="@drawable/master" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
