--- a/app/src/main/res/layout/adddetails2.xml
+++ b/app/src/main/res/layout/adddetails2.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".AddDetails2"
-    android:background="@drawable/hh"
+    android:background="@drawable/backgroundform"
     ><![CDATA[
     EditText
     android:id="@+id/editText"
