--- a/app/src/main/res/layout/activity_payment_account.xml
+++ b/app/src/main/res/layout/activity_payment_account.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/backgroundhome"
     tools:context=".paymentAccount">
 
     <ImageView
@@ -19,94 +20,95 @@
         app:srcCompat="@drawable/myac" />
 
     <TextView
-        android:id="@+id/textView19"
+        android:id="@+id/cno"
         android:layout_width="235dp"
         android:layout_height="48dp"
-        android:layout_marginTop="420dp"
-        android:hint="Registeration ID"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.909"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textView28"
-        android:layout_width="235dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="20dp"
+        android:fontFamily="sans-serif-black"
         android:hint="Card number"
+        android:textColor="#0C0808"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.92"
+        app:layout_constraintHorizontal_bias="0.926"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView19" />
+        app:layout_constraintTop_toBottomOf="@+id/rid" />
 
     <TextView
-        android:id="@+id/textView32"
-        android:layout_width="235dp"
-        android:layout_height="32dp"
+        android:id="@+id/nd"
+        android:layout_width="102dp"
+        android:layout_height="33dp"
+        android:fontFamily="sans-serif-black"
         android:hint="Name"
-        app:layout_constraintBottom_toTopOf="@+id/textView19"
+        android:textColor="#0A0505"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.555"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView5"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView5" />
 
     <TextView
-        android:id="@+id/textView33"
-        android:layout_width="242dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="12dp"
-        android:hint="CVC"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.946"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView28" />
-
-    <TextView
-        android:id="@+id/textView34"
+        android:id="@+id/Cvcd"
         android:layout_width="235dp"
         android:layout_height="48dp"
         android:layout_marginTop="12dp"
+        android:fontFamily="sans-serif-black"
+        android:hint="CVC"
+        android:textColor="#0C0707"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.926"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cno" />
+
+    <TextView
+        android:id="@+id/dd"
+        android:layout_width="235dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="12dp"
+        android:fontFamily="sans-serif-black"
         android:hint="Experitation Date"
+        android:textColor="#0E0707"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.909"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView33"
+        app:layout_constraintTop_toBottomOf="@+id/Cvcd"
         app:layout_constraintVertical_bias="0.036" />
 
     <TextView
         android:id="@+id/textView35"
-        android:layout_width="235dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="52dp"
-        android:text="TextView"
-        app:layout_constraintBottom_toTopOf="@+id/textView19"
+        android:layout_width="224dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="44dp"
+        android:text="Welcome To Paradise Hotel"
+        android:textColor="#BC1FF9"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.556"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView32"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/nd" />
 
     <Button
         android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
+        android:layout_width="204dp"
+        android:layout_height="40dp"
+        android:background="@drawable/button"
+        android:onClick="pay2"
+        android:text="Change Your Details"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView34" />
+        app:layout_constraintTop_toBottomOf="@+id/dd" />
 
     <TextView
         android:id="@+id/textView36"
         android:layout_width="89dp"
         android:layout_height="22dp"
-        android:layout_marginTop="56dp"
+        android:layout_marginTop="72dp"
+        android:fontFamily="sans-serif-black"
         android:text="Registration ID"
-        app:layout_constraintEnd_toStartOf="@+id/textView19"
-        app:layout_constraintHorizontal_bias="0.38"
+        android:textColor="#090606"
+        app:layout_constraintEnd_toStartOf="@+id/rid"
+        app:layout_constraintHorizontal_bias="0.472"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView35" />
 
@@ -115,9 +117,11 @@
         android:layout_width="92dp"
         android:layout_height="23dp"
         android:layout_marginTop="40dp"
+        android:fontFamily="sans-serif-black"
         android:text="Card Number"
-        app:layout_constraintEnd_toStartOf="@+id/textView28"
-        app:layout_constraintHorizontal_bias="0.322"
+        android:textColor="#0A0303"
+        app:layout_constraintEnd_toStartOf="@+id/cno"
+        app:layout_constraintHorizontal_bias="0.45"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView36" />
 
@@ -125,10 +129,12 @@
         android:id="@+id/textView38"
         android:layout_width="84dp"
         android:layout_height="19dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="32dp"
+        android:fontFamily="sans-serif-black"
         android:text="CVC"
-        app:layout_constraintEnd_toStartOf="@+id/textView33"
-        app:layout_constraintHorizontal_bias="0.421"
+        android:textColor="#0C0606"
+        app:layout_constraintEnd_toStartOf="@+id/Cvcd"
+        app:layout_constraintHorizontal_bias="0.405"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView37" />
 
@@ -137,11 +143,40 @@
         android:layout_width="78dp"
         android:layout_height="20dp"
         android:layout_marginTop="28dp"
+        android:fontFamily="sans-serif-black"
         android:text="Ex Date"
+        android:textColor="#0A0505"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/textView34"
-        app:layout_constraintHorizontal_bias="0.322"
+        app:layout_constraintEnd_toStartOf="@+id/dd"
+        app:layout_constraintHorizontal_bias="0.39"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView38"
-        app:layout_constraintVertical_bias="0.15" />
+        app:layout_constraintVertical_bias="0.04000002" />
+
+    <EditText
+        android:id="@+id/rid"
+        android:layout_width="232dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="56dp"
+        android:layout_marginEnd="16dp"
+        android:ems="10"
+        android:hint="Register ID"
+        android:background="@drawable/inputfield"
+        android:textColorHint="@color/Darkblue"
+        android:inputType="textPersonName"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView35" />
+
+    <Button
+        android:id="@+id/button10"
+        android:layout_width="49dp"
+        android:layout_height="29dp"
+        android:background="@drawable/button"
+        android:text="*"
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.516" />
 </androidx.constraintlayout.widget.ConstraintLayout>
