--- a/app/src/main/res/layout/activity_addddmiiiinnn.xml
+++ b/app/src/main/res/layout/activity_addddmiiiinnn.xml
@@ -12,18 +12,18 @@
         android:id="@+id/textView40"
         android:layout_width="275dp"
         android:layout_height="89dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="112dp"
         android:text="Welcome"
         android:textColor="#9C27B0"
         android:textSize="50sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.757"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="409dp"
         android:layout_height="480dp"
-        android:layout_marginTop="40dp"
         app:layout_constraintTop_toBottomOf="@+id/textView40"
         tools:layout_editor_absoluteX="1dp">
 
@@ -33,8 +33,10 @@
             android:layout_height="50dp"
             android:layout_marginTop="56dp"
             android:layout_marginEnd="16dp"
+            android:onClick="sendMessage"
             android:background="@drawable/button"
             android:text="View Messages"
+            android:textColor="#800F0F0F"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.595"
@@ -48,6 +50,7 @@
             android:layout_marginTop="48dp"
             android:background="@drawable/button"
             android:text="ADD DETAILS"
+            android:textColor="#80030303"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.504"
@@ -58,9 +61,10 @@
             android:id="@+id/pybtn"
             android:layout_width="300dp"
             android:layout_height="50dp"
-            android:layout_marginTop="36dp"
+            android:layout_marginTop="44dp"
             android:background="@drawable/button"
             android:text="PAYMENT"
+            android:textColor="#80070707"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.495"
@@ -74,9 +78,11 @@
             android:layout_marginTop="48dp"
             android:background="@drawable/button"
             android:text="MAKE RESERVATION"
+            android:textColor="#800A0A0A"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.495"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/pybtn"
             app:layout_constraintVertical_bias="0.0" />
