--- a/app/src/main/res/layout/makereservation3.xml
+++ b/app/src/main/res/layout/makereservation3.xml
@@ -39,12 +39,12 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/btnupdate"
+        app:layout_constraintStart_toEndOf="@+id/btnadd"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.966" />
 
     <Button
-        android:id="@+id/btnupdate"
+        android:id="@+id/btnadd"
         android:layout_width="154dp"
         android:layout_height="53dp"
         android:layout_marginStart="32dp"
