create slide show in gallery

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -368,7 +368,8 @@
                                     android:id="@+id/buttoncus"
                                     android:layout_width="match_parent"
                                     android:layout_height="match_parent"
-                                    android:background="@drawable/border" />
+                                    android:background="@drawable/border"
+                                    android:onClick="Gallery" />
 
                             </RelativeLayout>
 
